--- a/v3-cuda4.2/cuobjdump_to_ptxplus/Makefile.makedepend
+++ b/v3-cuda4.2/cuobjdump_to_ptxplus/Makefile.makedepend
@@ -54,3 +54,120 @@ cuobjdump_to_ptxplus.o: /usr/include/bits/select.h /usr/include/bits/sigset.h
 cuobjdump_to_ptxplus.o: /usr/include/bits/time.h /usr/include/sys/sysmacros.h
 cuobjdump_to_ptxplus.o: /usr/include/bits/pthreadtypes.h
 cuobjdump_to_ptxplus.o: /usr/include/alloca.h
+elf_lexer.o: /usr/include/stdio.h /usr/include/features.h
+elf_lexer.o: /usr/include/bits/predefs.h /usr/include/sys/cdefs.h
+elf_lexer.o: /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h
+elf_lexer.o: /usr/include/gnu/stubs-64.h /usr/include/bits/types.h
+elf_lexer.o: /usr/include/bits/typesizes.h /usr/include/libio.h
+elf_lexer.o: /usr/include/_G_config.h /usr/include/wchar.h
+elf_lexer.o: /usr/include/bits/wchar.h /usr/include/xlocale.h
+elf_lexer.o: /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h
+elf_lexer.o: /usr/include/string.h /usr/include/errno.h
+elf_lexer.o: /usr/include/bits/errno.h /usr/include/linux/errno.h
+elf_lexer.o: /usr/include/asm/errno.h /usr/include/asm-generic/errno.h
+elf_lexer.o: /usr/include/asm-generic/errno-base.h /usr/include/stdlib.h
+elf_lexer.o: /usr/include/bits/waitflags.h /usr/include/bits/waitstatus.h
+elf_lexer.o: /usr/include/endian.h /usr/include/bits/endian.h
+elf_lexer.o: /usr/include/bits/byteswap.h /usr/include/sys/types.h
+elf_lexer.o: /usr/include/time.h /usr/include/sys/select.h
+elf_lexer.o: /usr/include/bits/select.h /usr/include/bits/sigset.h
+elf_lexer.o: /usr/include/bits/time.h /usr/include/sys/sysmacros.h
+elf_lexer.o: /usr/include/bits/pthreadtypes.h /usr/include/alloca.h
+elf_lexer.o: elf_parser.hh /usr/include/unistd.h
+elf_lexer.o: /usr/include/bits/posix_opt.h /usr/include/bits/confname.h
+elf_lexer.o: /usr/include/getopt.h /usr/include/ctype.h
+elf_parser.o: /usr/include/stdio.h /usr/include/features.h
+elf_parser.o: /usr/include/bits/predefs.h /usr/include/sys/cdefs.h
+elf_parser.o: /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h
+elf_parser.o: /usr/include/gnu/stubs-64.h /usr/include/bits/types.h
+elf_parser.o: /usr/include/bits/typesizes.h /usr/include/libio.h
+elf_parser.o: /usr/include/_G_config.h /usr/include/wchar.h
+elf_parser.o: /usr/include/bits/wchar.h /usr/include/xlocale.h
+elf_parser.o: /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h
+elf_parser.o: cuobjdumpInstList.h cuobjdumpInst.h /usr/include/string.h
+elf_parser.o: /usr/include/stdlib.h /usr/include/bits/waitflags.h
+elf_parser.o: /usr/include/bits/waitstatus.h /usr/include/endian.h
+elf_parser.o: /usr/include/bits/endian.h /usr/include/bits/byteswap.h
+elf_parser.o: /usr/include/sys/types.h /usr/include/time.h
+elf_parser.o: /usr/include/sys/select.h /usr/include/bits/select.h
+elf_parser.o: /usr/include/bits/sigset.h /usr/include/bits/time.h
+elf_parser.o: /usr/include/sys/sysmacros.h /usr/include/bits/pthreadtypes.h
+elf_parser.o: /usr/include/alloca.h
+header_lexer.o: /usr/include/stdio.h /usr/include/features.h
+header_lexer.o: /usr/include/bits/predefs.h /usr/include/sys/cdefs.h
+header_lexer.o: /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h
+header_lexer.o: /usr/include/gnu/stubs-64.h /usr/include/bits/types.h
+header_lexer.o: /usr/include/bits/typesizes.h /usr/include/libio.h
+header_lexer.o: /usr/include/_G_config.h /usr/include/wchar.h
+header_lexer.o: /usr/include/bits/wchar.h /usr/include/xlocale.h
+header_lexer.o: /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h
+header_lexer.o: /usr/include/string.h /usr/include/errno.h
+header_lexer.o: /usr/include/bits/errno.h /usr/include/linux/errno.h
+header_lexer.o: /usr/include/asm/errno.h /usr/include/asm-generic/errno.h
+header_lexer.o: /usr/include/asm-generic/errno-base.h /usr/include/stdlib.h
+header_lexer.o: /usr/include/bits/waitflags.h /usr/include/bits/waitstatus.h
+header_lexer.o: /usr/include/endian.h /usr/include/bits/endian.h
+header_lexer.o: /usr/include/bits/byteswap.h /usr/include/sys/types.h
+header_lexer.o: /usr/include/time.h /usr/include/sys/select.h
+header_lexer.o: /usr/include/bits/select.h /usr/include/bits/sigset.h
+header_lexer.o: /usr/include/bits/time.h /usr/include/sys/sysmacros.h
+header_lexer.o: /usr/include/bits/pthreadtypes.h /usr/include/alloca.h
+header_lexer.o: header_parser.hh /usr/include/unistd.h
+header_lexer.o: /usr/include/bits/posix_opt.h /usr/include/bits/confname.h
+header_lexer.o: /usr/include/getopt.h /usr/include/ctype.h
+header_parser.o: cuobjdumpInstList.h cuobjdumpInst.h /usr/include/string.h
+header_parser.o: /usr/include/features.h /usr/include/bits/predefs.h
+header_parser.o: /usr/include/sys/cdefs.h /usr/include/bits/wordsize.h
+header_parser.o: /usr/include/gnu/stubs.h /usr/include/gnu/stubs-64.h
+header_parser.o: /usr/include/xlocale.h /usr/include/stdio.h
+header_parser.o: /usr/include/bits/types.h /usr/include/bits/typesizes.h
+header_parser.o: /usr/include/libio.h /usr/include/_G_config.h
+header_parser.o: /usr/include/wchar.h /usr/include/bits/wchar.h
+header_parser.o: /usr/include/bits/stdio_lim.h
+header_parser.o: /usr/include/bits/sys_errlist.h /usr/include/stdlib.h
+header_parser.o: /usr/include/bits/waitflags.h /usr/include/bits/waitstatus.h
+header_parser.o: /usr/include/endian.h /usr/include/bits/endian.h
+header_parser.o: /usr/include/bits/byteswap.h /usr/include/sys/types.h
+header_parser.o: /usr/include/time.h /usr/include/sys/select.h
+header_parser.o: /usr/include/bits/select.h /usr/include/bits/sigset.h
+header_parser.o: /usr/include/bits/time.h /usr/include/sys/sysmacros.h
+header_parser.o: /usr/include/bits/pthreadtypes.h /usr/include/alloca.h
+sass_lexer.o: /usr/include/stdio.h /usr/include/features.h
+sass_lexer.o: /usr/include/bits/predefs.h /usr/include/sys/cdefs.h
+sass_lexer.o: /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h
+sass_lexer.o: /usr/include/gnu/stubs-64.h /usr/include/bits/types.h
+sass_lexer.o: /usr/include/bits/typesizes.h /usr/include/libio.h
+sass_lexer.o: /usr/include/_G_config.h /usr/include/wchar.h
+sass_lexer.o: /usr/include/bits/wchar.h /usr/include/xlocale.h
+sass_lexer.o: /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h
+sass_lexer.o: /usr/include/string.h /usr/include/errno.h
+sass_lexer.o: /usr/include/bits/errno.h /usr/include/linux/errno.h
+sass_lexer.o: /usr/include/asm/errno.h /usr/include/asm-generic/errno.h
+sass_lexer.o: /usr/include/asm-generic/errno-base.h /usr/include/stdlib.h
+sass_lexer.o: /usr/include/bits/waitflags.h /usr/include/bits/waitstatus.h
+sass_lexer.o: /usr/include/endian.h /usr/include/bits/endian.h
+sass_lexer.o: /usr/include/bits/byteswap.h /usr/include/sys/types.h
+sass_lexer.o: /usr/include/time.h /usr/include/sys/select.h
+sass_lexer.o: /usr/include/bits/select.h /usr/include/bits/sigset.h
+sass_lexer.o: /usr/include/bits/time.h /usr/include/sys/sysmacros.h
+sass_lexer.o: /usr/include/bits/pthreadtypes.h /usr/include/alloca.h
+sass_lexer.o: sass_parser.hh /usr/include/unistd.h
+sass_lexer.o: /usr/include/bits/posix_opt.h /usr/include/bits/confname.h
+sass_lexer.o: /usr/include/getopt.h /usr/include/ctype.h
+sass_parser.o: /usr/include/stdio.h /usr/include/features.h
+sass_parser.o: /usr/include/bits/predefs.h /usr/include/sys/cdefs.h
+sass_parser.o: /usr/include/bits/wordsize.h /usr/include/gnu/stubs.h
+sass_parser.o: /usr/include/gnu/stubs-64.h /usr/include/bits/types.h
+sass_parser.o: /usr/include/bits/typesizes.h /usr/include/libio.h
+sass_parser.o: /usr/include/_G_config.h /usr/include/wchar.h
+sass_parser.o: /usr/include/bits/wchar.h /usr/include/xlocale.h
+sass_parser.o: /usr/include/bits/stdio_lim.h /usr/include/bits/sys_errlist.h
+sass_parser.o: cuobjdumpInstList.h cuobjdumpInst.h /usr/include/string.h
+sass_parser.o: /usr/include/stdlib.h /usr/include/bits/waitflags.h
+sass_parser.o: /usr/include/bits/waitstatus.h /usr/include/endian.h
+sass_parser.o: /usr/include/bits/endian.h /usr/include/bits/byteswap.h
+sass_parser.o: /usr/include/sys/types.h /usr/include/time.h
+sass_parser.o: /usr/include/sys/select.h /usr/include/bits/select.h
+sass_parser.o: /usr/include/bits/sigset.h /usr/include/bits/time.h
+sass_parser.o: /usr/include/sys/sysmacros.h /usr/include/bits/pthreadtypes.h
+sass_parser.o: /usr/include/alloca.h
